# shited

./: .editorconfig  .gitignore  README.md  meson.build
src/: buffer.cpp  buffer.hpp  editor.cpp  editor.hpp  main.cpp  piece.hpp  piece_table.cpp  piece_table.hpp  ui.cpp  ui.hpp
